# snake-game

./: CMakeLists.txt  map.txt
.github/workflows/: build.yml  main.yml
include/: core.h  map.h  render.h  utils.h  vector.h
src/: core.c  main.c  map.c  render.c  utils.c  vector.c
